syntax = "proto3";

option java_multiple_files = true;
option go_package = "github.com/SourceForgery/tachikoma";
option java_outer_classname = "BlockedEmailClass";

import "com/sourceforgery/tachikoma/grpc/frontend/common.proto";
import "google/protobuf/empty.proto";

package com.sourceforgery.tachikoma.grpc.frontend.blockedemail;

service BlockedEmailService {

    // Removes the blocked email based on specified from and recipient addresses
    rpc RemoveBlockedEmail (RemoveBlockedEmailRequest) returns (google.protobuf.Empty);

    // Returns all blocked email addresses
    rpc GetBlockedEmails (google.protobuf.Empty) returns (stream BlockedEmail);
}

// Request to remove a blocked email address
message RemoveBlockedEmailRequest {
    // Remove blocked emails on from (optional)
    EmailAddress from_email = 101;
    // Remove blocked emails on recipient email
    EmailAddress recipient_email = 102;
}

// The reason for a blocked email address
enum BlockedReason {
    UNSUBSCRIBED = 0;
    SPAM_MARKED = 1;
    HARD_BOUNCED = 2;
}

// A blocked email entry with from and recipient email
message BlockedEmail {
    // From email address
    EmailAddress from_email = 101;
    // Recipient email address
    EmailAddress recipient_email = 102;
    // The blocked reason
    BlockedReason blocked_reason = 103;
}
